[gd_scene load_steps=18 format=3 uid="uid://piwvjhqfhl04"]

[ext_resource type="Script" path="res://Enemies/bat.gd" id="1_d5ioa"]
[ext_resource type="Texture2D" uid="uid://t1qf72gd13u7" path="res://Enemies/Bat.png" id="1_gh5t2"]
[ext_resource type="Texture2D" uid="uid://dmqhgiex80g7t" path="res://Shadows/SmallShadow.png" id="2_irpkk"]
[ext_resource type="PackedScene" uid="uid://b32osj4x4wnjr" path="res://hit-hurt-box/hurtbox.tscn" id="4_boc51"]
[ext_resource type="PackedScene" uid="uid://rg015gpn5tmi" path="res://Stats.tscn" id="5_il5tl"]
[ext_resource type="PackedScene" uid="uid://cwxembq2fmdn5" path="res://Enemies/PlayerCheckArea.tscn" id="6_2jtck"]
[ext_resource type="PackedScene" uid="uid://cfa616qmvwnfp" path="res://hit-hurt-box/hitbox.tscn" id="7_4diw8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0np2w"]
atlas = ExtResource("1_gh5t2")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_48jlu"]
atlas = ExtResource("1_gh5t2")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoe5b"]
atlas = ExtResource("1_gh5t2")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_puyr3"]
atlas = ExtResource("1_gh5t2")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ssol"]
atlas = ExtResource("1_gh5t2")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_njtty"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0np2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48jlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoe5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puyr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ssol")
}],
"loop": true,
"name": &"default",
"speed": 14.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_upbm3"]
radius = 3.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r2wen"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bsitk"]
radius = 54.0093

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nmj46"]
radius = 5.0
height = 16.0

[node name="bat" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_d5ioa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_njtty")
autoplay = "default"
frame_progress = 0.409204

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_irpkk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_upbm3")

[node name="hurt" parent="." instance=ExtResource("4_boc51")]
collision_layer = 16
collision_mask = 8
need_invincible = true

[node name="CollisionShape2D" parent="hurt" index="0"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_r2wen")

[node name="Stats" parent="." instance=ExtResource("5_il5tl")]
MAX_HEALTH = 2

[node name="PlayerCheckArea" parent="." instance=ExtResource("6_2jtck")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerCheckArea" index="0"]
shape = SubResource("CircleShape2D_bsitk")

[node name="hit" parent="." instance=ExtResource("7_4diw8")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="hit" index="0"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_nmj46")
debug_color = Color(0.956863, 0.164706, 0.321569, 0.419608)

[connection signal="area_entered" from="hurt" to="." method="_on_area_2d_area_entered"]
[connection signal="health_empty" from="Stats" to="." method="_on_stats_health_empty"]

[editable path="hurt"]
[editable path="PlayerCheckArea"]
[editable path="hit"]
